# AdvancedAlgorithms

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  PROJECT_ALGORITHMS.md  README.md
.github/workflows/: ci.yml  performance.yml
docs/: centroid_decomposition.md  testing.md
examples/: centroid_nearest_marked.cpp
include/advanced_algorithms/: all.hpp
include/advanced_algorithms/data_structures/: disjoint_set_union.hpp  lazy_segment_tree.hpp  sparse_table.hpp
include/advanced_algorithms/graphs/: bridges_articulation.hpp  dijkstra.hpp  dinic.hpp  tarjan_scc.hpp
include/advanced_algorithms/optimization/: simulated_annealing.hpp
include/advanced_algorithms/strings/: aho_corasick.hpp
include/advanced_algorithms/trees/: centroid_decomposition.hpp  heavy_light_decomposition.hpp  lca_binary_lifting.hpp
include/advanced_algorithms/trees/detail/: tree_validation.hpp
scripts/: run_all_checks.sh
tests/: CMakeLists.txt  performance_regressions.cpp  performance_tests.cpp  test_data_structures.cpp  test_framework.hpp  test_graphs.cpp  test_main.cpp  test_optimization.cpp  test_regressions.cpp  test_strings.cpp  test_trees.cpp
